[FIX] Different approach to prevent unbroken string from overflowing popover: made user info table responsive.

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3019,14 +3019,8 @@ body.fullscreen.tiki.navbar-padding {
   border: none;
   background: transparent; }
 
-.tiki .popover {
-  word-wrap: break-word;
-  word-break: break-all; }
-
 .tiki.tiki-list_file_gallery .col1 .popover, .tiki.tiki_file_galleries .col1 .popover, .tiki.tiki_trackers .col1 .popover, .tiki .wikiplugin-trackerlist .popover {
-  max-width: 50vw;
-  word-wrap: normal;
-  word-break: normal; }
+  max-width: 50vw; }
 
 .tiki .popover p:last-child {
   margin-bottom: 0; }
